--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.flex {
+  display: flex;
+}
+.friends {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  img {
+    border-radius: 50%;
+    margin-right: 15px;
+    height: 100px;
+    width: 100px;
+    align-self: center;
+  }
+}
+button {
+  background-color: darkolivegreen;
+  color: #fff;
+  border: 0;
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  min-width: 100px;
+  font-size: 16px;
+}
+
+input,
+select {
+  min-height: 30px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 2px solid darkcyan;
+}
+select {
+  min-height: 40px;
+}
+
+.form-elem {
+  display: flex;
+  flex-direction: column;
+}
+
+.bg-light {
+  background-color: lightgoldenrodyellow;
+  padding: 15px;
+}
+.button-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 15px;
+}
+
+.wrapper {
+  display: flex;
+  & > div {
+    flex: 1;
+  }
+}
+.mt-15 {
+  margin-top: 15px;
 }
